# dead-commit

./: .gitignore  MANIFEST.in  README.md  app.py  arkanoid.py  game.js  main.py  pyproject.toml  requirements.txt  run_game.ps1  scores.json
cli-puzzle/: app.py  main.py  requirements.txt
cli-puzzle/content/: chapter1.json  chapter1_en.json  chapter2.json  chapter2_en.json
cli-puzzle/content/ascii_art/: final_message.txt  server_room.txt  title.txt
cli-puzzle/engine/: command.py  inventory.py  save.py  scene.py
cli-puzzle/saves/: save.json
cli-puzzle/tools/: generate_art.py
content/: chapter1.json  chapter1_en.json  chapter2.json  chapter2_en.json
content/ascii_art/: encrypted_terminal.txt  locked_room.txt  title.txt
docs/superpowers/specs/: 2026-03-17-cli-puzzle-game-design.md
engine/: command.py  save.py  scene.py
